dnl Process this file with autoconf to produce a configure script.
AC_INIT(JSBSim.cpp, 1.0.0-advtrim-8, jon@jsbsim.org)

dnl set the $host variable based on local machine/os
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(jsbsim, 1.0.0-advtrim-8)
AC_CONFIG_MACRO_DIR([m4])

# Before making a release, the LT_VERSION string should be modified.
# See: http://www.gnu.org/software/libtool/manual.html#Versioning
#
# The string is of the form Current:Revision:Age.
#
# The following lines are taken from the GNU Libtool Manual:
# Here are a set of rules to help you update your library version information:
#
# Start with version information of 0:0:0 for each libtool library.
# Update the version information only immediately before a public release of your software.
# More frequent updates are unnecessary, and only guarantee that the current interface number
# gets larger faster.
#
# 1) If the library source code has changed at all since the last update,
#    then increment revision (c:r:a becomes c:r+1:a).
# 2) If any interfaces have been added, removed, or changed since the last update,
#    increment current, and set revision to 0.
# 3) If any interfaces have been added since the last public release, then increment age.
# 4) If any interfaces have been removed since the last public release, then set age to 0.
#
# Never try to set the interface numbers so that they correspond to the release number of your package.
# This is an abuse that only fosters misunderstanding of the purpose of library versions. Instead,
# use the -release flag (see Release numbers), but be warned that every release of your package will
# not be binary compatible with any other release.
AC_SUBST(LT_VERSION, [0:0:0])

AC_ARG_ENABLE([libraries],
    [AS_HELP_STRING([--enable-libraries],
        [build JSBSim libraries [default=no]])],
     [build_libraries=$enableval],
     [build_libraries=no])
AM_CONDITIONAL(BUILD_LIBRARIES, test "x$build_libraries" = xyes)

# AutoTroll with Qt
AC_ARG_ENABLE([gui],
    [AS_HELP_STRING([--enable-gui],
        [build JSBSim gui [default=no]])],
     [build_gui=$enableval],
     [build_gui=no])
AM_CONDITIONAL(BUILD_GUI, test "x$build_gui" = xyes)

dnl Checks for programs.
AC_DISABLE_SHARED
AC_PROG_CPP
AC_PROG_AWK
AC_PROG_CC
AC_PROG_LIBTOOL
AC_PROG_CXX

dnl Checks for libraries.
AC_CHECK_LIB(m,[main],[],[
			echo "Error! Cannot find c math library (-lm)"
			exit -1])


dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_MEMCMP

case "${host}" in
*-*-irix*)
    if test "$CXX" = "CC"; then
        AR="CC -ar"
        ARFLAGS="-o"
        CXXFLAGS="$CXXFLAGS -I$(top_srcdir)/include/mipspro -LANG:libc_in_namespace_std=off"
    else
        AR="ar"
        ARFLAGS="cru"
    fi
    ;;
*-*-mingw32*)
    LIBS="$LIBS -lwsock32"
    ;;
*)
    if test "$CXX" = "g++"; then
       CXXFLAGS="$CXXFLAGS -Wno-non-template-friend"
    fi
    AR="ar"
    ARFLAGS="cru"
    ;;
esac
AC_SUBST(AR)
AC_SUBST(ARFLAGS)

dnl check for socklen_t (in Unix98)
AC_MSG_CHECKING(for socklen_t)
AC_TRY_COMPILE([
#include <sys/types.h>
#include <sys/socket.h>
socklen_t apa;
],[],[
AC_MSG_RESULT(yes)],[
AC_TRY_COMPILE([
#include <sys/types.h>
#include <sys/socket.h>
int accept (int, struct sockaddr *, size_t *);
],[],[
AC_MSG_RESULT(size_t)
AC_DEFINE(socklen_t,size_t)], [
AC_MSG_RESULT(int)
AC_DEFINE(socklen_t,int)])])

AC_OUTPUT( 
	jsbsim.pc 
		src/math/Makefile 
	src/models/flight_control/Makefile 
	src/models/propulsion/Makefile 
	src/models/Makefile 
	src/models/atmosphere/Makefile 
	src/simgear/props/Makefile 
	src/simgear/magvar/Makefile 
	src/simgear/misc/Makefile 
	src/simgear/xml/Makefile 
	src/simgear/Makefile 
	src/initialization/Makefile 
	src/Makefile 
	src/input_output/Makefile 
	src/utilities/Makefile 
	src/utilities/aeromatic/Makefile 
	data_plot/Makefile 
	scripts/Makefile 
	gui/Makefile 
	aircraft/c310/Makefile 
	aircraft/f104/Makefile 
	aircraft/J246/Systems/Makefile 
	aircraft/J246/Makefile 
	aircraft/fokker100/Systems/Makefile 
	aircraft/fokker100/Makefile 
	aircraft/sgs126/Makefile 
	aircraft/blank/Makefile 
	aircraft/XB-70/Makefile 
	aircraft/Shuttle/Makefile 
	aircraft/c172x/Makefile 
	aircraft/L410/Makefile 
	aircraft/c172p/Makefile 
	aircraft/mk82/Makefile 
	aircraft/MD11/Makefile 
	aircraft/minisgs/Makefile 
	aircraft/f15/Makefile 
	aircraft/Boeing314/Makefile 
	aircraft/c172r/Makefile 
	aircraft/sgs233/Makefile 
	aircraft/x24b/Makefile 
	aircraft/p51d/Engines/Makefile 
	aircraft/p51d/Systems/Makefile 
	aircraft/p51d/Makefile 
	aircraft/F4N/Engines/Makefile 
	aircraft/F4N/Makefile 
	aircraft/T37/Makefile 
	aircraft/pogo-jsbsim/Engines/Makefile 
	aircraft/pogo-jsbsim/Makefile 
	aircraft/ZLT-NT/Systems/Makefile 
	aircraft/ZLT-NT/Makefile 
	aircraft/pc7/Makefile 
	aircraft/ah1s/Makefile 
	aircraft/Submarine_Scout/Systems/Makefile 
	aircraft/Submarine_Scout/Makefile 
	aircraft/737/Makefile 
	aircraft/Concorde/Makefile 
	aircraft/T38/Makefile 
	aircraft/A320/Makefile 
	aircraft/Short_S23/Systems/Makefile 
	aircraft/Short_S23/Makefile 
	aircraft/fokker50/Makefile 
	aircraft/B17/Makefile 
	aircraft/t6texan2/Makefile 
	aircraft/C130/Makefile 
	aircraft/paraglider/Makefile 
	aircraft/X15/Makefile 
	aircraft/DHC6/Makefile 
	aircraft/L17/Makefile 
	aircraft/OV10/Makefile 
	aircraft/Makefile 
	aircraft/f22/Makefile 
	aircraft/easystar/Engines/Makefile 
	aircraft/easystar/scripts/Makefile 
	aircraft/easystar/Datcom/Makefile 
	aircraft/easystar/Models/Makefile 
	aircraft/easystar/Makefile 
	aircraft/ball/Makefile 
	aircraft/LM/Makefile 
	aircraft/A4/Makefile 
	aircraft/F80C/Makefile 
	aircraft/B747/Makefile 
	aircraft/pa28/Makefile 
	aircraft/dr1/Makefile 
	aircraft/SGS/Makefile 
	aircraft/c182/Makefile 
	aircraft/f16/Systems/Makefile 
	aircraft/f16/Makefile 
	data_output/Makefile 
	Makefile 
	check_cases/orbit/data_plot/Makefile 
	check_cases/orbit/logged_data/Makefile 
	check_cases/orbit/scripts/Makefile 
	check_cases/orbit/aircraft/Makefile 
	check_cases/orbit/aircraft/ball/Makefile 
	check_cases/orbit/data_output/Makefile 
	check_cases/orbit/Makefile 
	check_cases/orbit/engine/Makefile 
	check_cases/orbit/systems/Makefile 
	check_cases/Makefile 
	check_cases/ground_tests/data_plot/Makefile 
	check_cases/ground_tests/logged_data/Makefile 
	check_cases/ground_tests/scripts/Makefile 
	check_cases/ground_tests/aircraft/groundtest/Makefile 
	check_cases/ground_tests/aircraft/Makefile 
	check_cases/ground_tests/data_output/Makefile 
	check_cases/ground_tests/Makefile 
	check_cases/ground_tests/engine/Makefile 
	check_cases/ground_tests/systems/Makefile 
	engine/Makefile 
	systems/Makefile )
