SUBDIRS = \
	SGS \
	MD11 \
	B17 \
	c172x \
	f104 \
	C130 \
	Shuttle \
	T38 \
	LM \
	f16 \
	B747 \
	minisgs \
	sgs126 \
	DHC6 \
	ZLT-NT \
	blank \
	pc7 \
	OV10 \
	x24b \
	fokker100 \
	dr1 \
	737 \
	f22 \
	t6texan2 \
	pogo-jsbsim \
	p51d \
	paraglider \
	J246 \
	F4N \
	c310 \
	c182 \
	ball \
	XB-70 \
	c172r \
	A320 \
	L410 \
	fokker50 \
	mk82 \
	Submarine_Scout \
	T37 \
	sgs233 \
	Concorde \
	L17 \
	Short_S23 \
	A4 \
	c172p \
	f15 \
	pa28 \
	ah1s \
	X15 \
	F80C \
	Boeing314 
aircraft_datadir = ${JSBSim_datadir}/aircraft
aircraft_data = \
	Makefile.am \
	Makefile.in \
	Makefile \
	.cvsignore \
	aircraft_template.xml 
EXTRA_DIST=$(aircraft_data)
