SUBDIRS = \
	DHC6 \
	dr1 \
	ah1s \
	f104 \
	c172x \
	Shuttle \
	X15 \
	Short_S23 \
	J246 \
	B17 \
	L17 \
	f16 \
	SGS \
	sgs126 \
	blank \
	L410 \
	t6texan2 \
	pc7 \
	A320 \
	p51d \
	pogo-jsbsim \
	Submarine_Scout \
	f15 \
	Boeing314 \
	ball \
	c310 \
	F80C \
	c182 \
	XB-70 \
	paraglider \
	C130 \
	T37 \
	A4 \
	mk82 \
	c172r \
	x24b \
	c172p \
	MD11 \
	LM \
	fokker100 \
	OV10 \
	fokker50 \
	B747 \
	Concorde \
	pa28 \
	minisgs \
	F4N \
	737 \
	ZLT-NT \
	f22 \
	T38 \
	sgs233 
aircraftdir = ${pkgdatadir}/aircraft
aircraft_DATA = \
	aircraft_template.xml 
EXTRA_DIST=$(aircraft_data)
