SUBDIRS = \
	c310 \
	f104 \
	J246 \
	fokker100 \
	sgs126 \
	blank \
	XB-70 \
	Shuttle \
	c172x \
	L410 \
	c172p \
	mk82 \
	MD11 \
	minisgs \
	f15 \
	Boeing314 \
	c172r \
	sgs233 \
	x24b \
	p51d \
	F4N \
	T37 \
	pogo-jsbsim \
	ZLT-NT \
	pc7 \
	ah1s \
	Submarine_Scout \
	737 \
	Concorde \
	T38 \
	A320 \
	Short_S23 \
	fokker50 \
	B17 \
	t6texan2 \
	C130 \
	paraglider \
	X15 \
	DHC6 \
	L17 \
	OV10 \
	f22 \
	easystar \
	ball \
	LM \
	A4 \
	F80C \
	B747 \
	pa28 \
	dr1 \
	SGS \
	c182 \
	f16 
aircraftdir = ${pkgdatadir}/aircraft
aircraft_DATA = \
	aircraft_template.xml 
EXTRA_DIST=$(aircraft_DATA)
