engine_datadir = ${JSBSim_datadir}/engine
engine_data = \
	prop30FP2B.xml \
	XLR99.xml \
	Oberursel-UrII.xml \
	Makefile.am \
	MerlinV1650.xml \
	electric147kW.xml \
	SSME.xml \
	propDA-R352_6-123-F_2.xml \
	engIO470D.xml \
	t56.xml \
	prop_SSZ.xml \
	Dr1_propeller.xml \
	SSME_nozzle.xml \
	PT6A-27.xml \
	propHS139v.xml \
	engtm601.xml \
	BR710.xml \
	F100-PW-229.xml \
	twin_pratt_and_whitney_t73.xml \
	SRB.xml \
	Zenoah_G-26A.xml \
	xlr99_nozzle.xml \
	PT6A-68.xml \
	direct.xml \
	propC8v.xml \
	vrtule2.xml \
	Olympus593Mrk610.xml \
	AJ26-33A.xml \
	Makefile.in \
	LMdescent.xml \
	engIO540AB1A5.xml \
	avco_lycoming_t53.xml \
	prop_Clark_Y7570.xml \
	Makefile \
	JT9D-3.xml \
	PW125B.xml \
	engRRMerlinXII.xml \
	eng_RRhawk.xml \
	.cvsignore \
	CF6-80C2.xml \
	J85-GE-5.xml \
	CFM56.xml \
	propC6v.xml \
	prop_deHavilland5000.xml \
	engIO360C.xml \
	ah1s_rotor.xml \
	Tay-651.xml \
	prop_PT6.xml \
	R-1820-97.xml \
	RB211-524.xml \
	J79-GE-11A.xml \
	RollsRoyce.xml \
	J52.xml \
	propHO-V373-D.xml \
	test_turbine.xml \
	T76.xml \
	eng_PegasusXc.xml \
	LM_descent_nozzle.xml \
	prop_generic2f.xml \
	GE-CF6-80C2-B1F.xml \
	propC10v.xml \
	SRB_nozzle.xml \
	F119-PW-1.xml \
	HamiltonStd6243A-3.xml \
	t56_prop.xml \
	AJ26-33_nozzle.xml \
	P51prop.xml \
	electric_1mw.xml \
	prop_81in2v.xml \
	RL10_nozzle.xml \
	engRRMerlin61.xml \
	J33-A-35.xml \
	J69-T25.xml \
	TRENT-900.xml \
	RL10.xml \
	eng_io320.xml \
	CFM56_5.xml \
	prop_75in2f.xml \
	s64_rotor.xml 
EXTRA_DIST=$(engine_data)
