enginedir = ${pkgdatadir}/engine
engine_DATA = \
	GE-CF6-80C2-B1F.xml \
	prop_81in2v.xml \
	propC8v.xml \
	BR710.xml \
	avco_lycoming_t53.xml \
	J79-GE-11A.xml \
	prop_generic2f.xml \
	J85-GE-5.xml \
	Zenoah_G-26A.xml \
	electric147kW.xml \
	xlr99_nozzle.xml \
	vrtule2.xml \
	prop_PT6.xml \
	test_turbine.xml \
	CFM56.xml \
	engRRMerlin61.xml \
	LM_descent_nozzle.xml \
	SRB_nozzle.xml \
	RB211-524.xml \
	t56.xml \
	propHO-V373-D.xml \
	s64_rotor.xml \
	P51prop.xml \
	T76.xml \
	electric_1mw.xml \
	t56_prop.xml \
	JT9D-3.xml \
	CF6-80C2.xml \
	SSME.xml \
	J69-T25.xml \
	J33-A-35.xml \
	propC6v.xml \
	prop30FP2B.xml \
	AJ26-33A.xml \
	engIO360C.xml \
	MerlinV1650.xml \
	AJ26-33_nozzle.xml \
	F100-PW-229.xml \
	eng_RRhawk.xml \
	F119-PW-1.xml \
	CFM56_5.xml \
	TRENT-900.xml \
	RL10.xml \
	ah1s_rotor.xml \
	RL10_nozzle.xml \
	engIO540AB1A5.xml \
	twin_pratt_and_whitney_t73.xml \
	prop_deHavilland5000.xml \
	engRRMerlinXII.xml \
	HamiltonStd6243A-3.xml \
	XLR99.xml \
	J52.xml \
	LMdescent.xml \
	Dr1_propeller.xml \
	Oberursel-UrII.xml \
	Olympus593Mrk610.xml \
	R-1820-97.xml \
	engtm601.xml \
	prop_SSZ.xml \
	propHS139v.xml \
	PT6A-68.xml \
	direct.xml \
	eng_PegasusXc.xml \
	PW125B.xml \
	eng_io320.xml \
	propDA-R352_6-123-F_2.xml \
	prop_75in2f.xml \
	prop_Clark_Y7570.xml \
	SRB.xml \
	engIO470D.xml \
	SSME_nozzle.xml \
	Tay-651.xml \
	PT6A-27.xml \
	propC10v.xml \
	RollsRoyce.xml 
EXTRA_DIST=$(engine_data)
