enginedir = ${pkgdatadir}/engine
engine_DATA = \
	SRB_nozzle.xml \
	F100-PW-229.xml \
	prop_PT6.xml \
	JT9D-3.xml \
	R-1820-97.xml \
	XLR99.xml \
	prop_75in2f.xml \
	Oberursel-UrII.xml \
	HamiltonStd6243A-3.xml \
	TRENT-900.xml \
	SRB.xml \
	prop_81in2v.xml \
	LMdescent.xml \
	P51prop.xml \
	Dr1_propeller.xml \
	eng_RRhawk.xml \
	GE-CF6-80C2-B1F.xml \
	AJ26-33_nozzle.xml \
	electric147kW.xml \
	RL10.xml \
	PT6A-27.xml \
	direct.xml \
	propHO-V373-D.xml \
	PT6A-68.xml \
	s64_rotor.xml \
	Tay-651.xml \
	ah1s_rotor.xml \
	SSME.xml \
	RB211-524.xml \
	avco_lycoming_t53.xml \
	engtm601.xml \
	engIO470D.xml \
	SSME_nozzle.xml \
	prop_Clark_Y7570.xml \
	Olympus593Mrk610.xml \
	BR710.xml \
	J85-GE-5.xml \
	LM_descent_nozzle.xml \
	xlr99_nozzle.xml \
	propDA-R352_6-123-F_2.xml \
	CFM56_5.xml \
	propHS139v.xml \
	prop_deHavilland5000.xml \
	F119-PW-1.xml \
	test_turbine.xml \
	t56_prop.xml \
	RL10_nozzle.xml \
	J52.xml \
	BR-725.xml \
	propC8v.xml \
	J79-GE-11A.xml \
	engIO540AB1A5.xml \
	prop_SSZ.xml \
	twin_pratt_and_whitney_t73.xml \
	T76.xml \
	PW125B.xml \
	prop_generic2f.xml \
	electric_1mw.xml \
	J33-A-35.xml \
	CF6-80C2.xml \
	J69-T25.xml \
	vrtule2.xml \
	engIO360C.xml \
	t56.xml \
	propC10v.xml \
	MerlinV1650.xml \
	RollsRoyce.xml \
	Tay-620.xml \
	propC6v.xml \
	eng_io320.xml \
	eng_PegasusXc.xml \
	Zenoah_G-26A.xml \
	CFM56.xml \
	prop30FP2B.xml \
	engRRMerlin61.xml \
	engRRMerlinXII.xml \
	AJ26-33A.xml 
EXTRA_DIST=$(engine_DATA)
